// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id int [pk]
  name string [unique]
  password string
  rememberToken string
  created_at datetime
  updated_at datetime
}

Table socios {
  id int [pk]
  dni string [unique]
  nombre string
  apellidos string
  fecha_nac date
  email string [unique]
  telefono int [unique]
  direccion string
  provincia string
  ciudad string
  imagen string [unique, null]
  cod_acceso string [unique]
  user_id int [null, ref:- users.id]
  created_at datetime
  updated_at datetime
}

Table entrenadores {
  id int [pk]
  nombre string [unique]
  apellidos string
  email string [unique]
  telefono int [unique]
  admin boolean
  imagen string [unique, null]
  user_id int [null, ref:- users.id]
  created_at datetime
  updated_at datetime
}

Table ejercicios {
  id int [pk]
  nombre string
  descripcion text
  imagen string [unique, null]
  grupo_id string [ref:- grupos_musculares.id]
  created_at datetime
  updated_at datetime

  indexes {
    (nombre, grupo_id) [unique, name: "UNQ_nombre_grupoid"]
  }
}

Table tarifas {
  id int [pk]
  nombre string [unique]
  descripcion string
  duracion integer
  precio decimal
  created_at datetime
  updated_at datetime
}

Table productos {
  id int [pk]
  nombre string [unique]
  descripcion text
  precio decimal
  imagen string [unique, null]
  created_at datetime
  updated_at datetime
}

Table socios_tarifas {
  socio_id int [unique, ref:> socios.id]
  tarifa_id int [ref:> tarifas.id]
  fecha_inicio date
  fecha_fin date
}

Table rutinas {
  id int [pk]
  nombre string
  descripcion text [null]
  socio_id int [ref:> socios.id]
  created_at datetime
  updated_at datetime

  indexes {
    (nombre, socio_id) [unique, name: "UNQ_nombre_socioId"]
  }
}

Table seguimientos {
  id int [pk]
  rutina_id int [null, ref:> rutinas.id]
  acceso_id int [null, ref:> accesos.id]
  socio_id int [ref:> socios.id]
  observaciones text [null]
  fecha date

  indexes {
    (socio_id, fecha) [unique, name: "UNQ_socioId_fecha"]
  }
}

Table taquillas {
  id int [pk]
  socio_id int [null, unique, ref:-socios.id]
  fecha_fianza datetime [null]
  fianza int [null]
}

Table productos_socios {
  socio_id int [ref:> socios.id]
  producto_id int [ref:> productos.id]
  fecha_compra datetime
  cantidad int
}

Table accesos {
  id int [pk]
  hora_entrada datetime
  hora_salida datetime
  socio_id int [ref:> socios.id]
}

Table grupos_musculares {
  id int [pk]
  nombre string [unique]
}

Table ejercicios_rutinas {
  rutina_id int [ref:> rutinas.id]
  ejercicio_id int [ref:> ejercicios.id]
  num_series int
  num_repeticiones int

  indexes {
    (rutina_id, ejercicio_id) [unique, name: "UNQ_rutiaId_ejercicioId"]
  }
}

Table ejercicios_seguimientos {
  seguimiento_id int [ref:> seguimientos.id]
  ejercicio_id int [ref:> ejercicios.id]

  indexes {
    (seguimiento_id, ejercicio_id) [unique, name: "UNQ_seguimientoId_ejercicioId"]
  }
}

Table calentamientos {
  id int [pk]
  nombre string [unique]
  descripcion text
  imagen string [unique, null]
  created_at datetime
  updated_at datetime
}

Table calentamientos_rutinas {
  rutina_id int [ref:> rutinas.id]
  calentamineto_id int [ref:> calentamientos.id]
  tiempo int

  indexes {
    (rutina_id, calentamineto_id) [unique, name: "UNQ_rutinaId_calentamientoId"]
  }
}

Table calentamientos_seguimientos {
  seguimiento_id int [ref:> seguimientos.id]
  calentamineto_id int [ref:> calentamientos.id]

  indexes {
    (seguimiento_id, calentamineto_id) [unique, name: "UNQ_seguimientoId_calentamientoId"]
  }
}
